# fhi_sed_config

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
config/sed/: NXmpes_config_v1.json  config.yaml  config_v1.yaml
config/specsscan/: NXmpes_config.json  NXmpes_config_doublepump.json  NXmpes_config_v1.json  config_v1.yaml
sed/: NXmpes_config.json  config.yaml  sed_config_carbide.yaml
sed/templates/: Bin_scan_to_NeXus.ipynb  Generate_calibration_parameters.ipynb  Scan_diagnostics.ipynb
specsscan/: NXmpes_arpes_config.json  config.yaml
specsscan/templates/: Save_scan_to_NeXus.ipynb  Setup Parameters.ipynb  config_doublepump.yaml
src/fhi_sed_config/nomad/: entrypoints.py
src/fhi_sed_config/nomad/resources/Metis/: Bin_scan_to_NeXus.ipynb  Cleanup_Scratch.ipynb  Generate_calibration_parameters.ipynb
src/fhi_sed_config/nomad/resources/Phoibos/_config/: NXmpes_config.json  NXmpes_config_doublepump.json  config.yaml  config_doublepump.yaml
src/fhi_sed_config/nomad/resources/sed/: NXmpes_config.json
src/fhi_sed_config/nomad/resources/sed/templates/: Generate_calibration_parameters.ipynb
src/fhi_sed_config/nomad/resources/specsscan/: config.yaml
templates/Metis/: Bin_scan_to_NeXus.ipynb  Generate_calibration_parameters.ipynb  Scan_diagnostics.ipynb
templates/Phoibos/: Save_scan_to_NeXus.ipynb  Setup_Parameters.ipynb  config_doublepump.yaml
